# physics_sims

./: README.md  pyproject.toml
src/gravity/: visualisation.py
src/gravity/newtonian/: constants.py  dynamics.py  states.py
